modal alignment fixed

--- a/client/styles/modal.scss
+++ b/client/styles/modal.scss
@@ -77,7 +77,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 120%;
-        text-align: left !important;
+        text-align: left ;
         font-family: 'Inter', sans-serif !important;
 
     }
@@ -141,4 +141,14 @@
 }
 .CompactModalExitButton {
     color: #fff;
+}
+
+
+.amount,.priority{
+    text-align: right !important;
+}
+
+th .amount, .priority{
+    text-align: right !important;
+
 }
